--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "archieml-pipe",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Pipe a Google Doc with ArchieML data to local JSON with easy authentication steps.",
   "repository": {
     "type": "git",
@@ -10,6 +10,7 @@
   "main": "lib/main.js",
   "dependencies": {
     "archieml": "^0.4.2",
+    "babel-eslint": "^7.2.3",
     "fs-extra": "^3.0.1",
     "google-auth-library": "^0.10.0",
     "googleapis": "^19.0.0",
