--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "archieml-pipe",
-  "version": "0.0.3",
+  "version": "0.1.0",
   "description": "Pipe a Google Doc with ArchieML data to local JSON with easy authentication steps.",
   "repository": {
     "type": "git",
@@ -11,6 +11,7 @@
   "dependencies": {
     "archieml": "^0.4.2",
     "babel-eslint": "^7.2.3",
+    "chalk": "^1.1.3",
     "fs-extra": "^3.0.1",
     "google-auth-library": "^0.10.0",
     "googleapis": "^19.0.0",
